fix : offest hamburger icon on iphone

--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -47,7 +47,7 @@
     &__mobile {
         display: flex; 
         flex-direction: column;
-        padding-left: 3%;
+        padding-left: 20px;
         &-hamburger{
           background-color: $main-color-1;
           border: 2px solid $accent-color-1;
